// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeFormTableHeaderButtonOptions should normalize complex form table header button options 1`] = `
{
  "backend": {
    "kind": "nestjs",
    "module": "jest",
    "prefix": null,
    "project": null,
    "serverId": null,
  },
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": "jest-header-button",
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "form": {
    "controlList": [
      {
        "backend": {
          "kind": "nestjs",
          "module": "jest",
          "prefix": null,
          "project": null,
          "serverId": null,
        },
        "formField": {
          "cssClass": null,
          "directiveList": [],
          "hasClearButton": true,
          "label": null,
          "prefixButton": null,
          "suffixButton": {
            "directiveList": [
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "@rxap/material-form-system",
                "name": "rxapInputClearButton",
                "namedImport": "InputClearButtonDirective",
                "namespaceImport": null,
              },
            ],
            "icon": "clear",
            "importList": [
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "@angular/material/icon",
                "name": "MatIconModule",
                "namedImport": null,
                "namespaceImport": null,
              },
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "@angular/material/button",
                "name": "MatButtonModule",
                "namedImport": null,
                "namespaceImport": null,
              },
            ],
            "svgIcon": null,
          },
        },
        "handlebars": [Function],
        "importList": [
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/input",
            "name": "MatInputModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/icon",
            "name": "MatIconModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/button",
            "name": "MatButtonModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@rxap/material-form-system",
            "name": "rxapInputClearButton",
            "namedImport": "InputClearButtonDirective",
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/forms",
            "name": "ReactiveFormsModule",
            "namedImport": null,
            "namespaceImport": null,
          },
        ],
        "inputType": "text",
        "isArray": false,
        "isDisabled": false,
        "isOptional": false,
        "isReadonly": false,
        "isRequired": false,
        "kind": "input",
        "label": null,
        "memberList": [],
        "name": "query",
        "placeholder": null,
        "role": "control",
        "source": null,
        "state": null,
        "template": "input-form-control.hbs",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "string",
          "namedImport": null,
          "namespaceImport": null,
        },
        "validatorList": [],
      },
    ],
    "identifier": null,
    "matFormFieldDefaultOptions": null,
    "role": null,
    "window": false,
  },
  "icon": "add",
  "kind": "form",
  "label": "Search",
  "name": "advanced-search",
  "nestModule": "jest",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": null,
}
`;

exports[`NormalizeFormTableHeaderButtonOptions should normalize minimal form table header button options 1`] = `
{
  "backend": {
    "kind": "nestjs",
    "module": "jest",
    "prefix": null,
    "project": null,
    "serverId": null,
  },
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": "jest-header-button",
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "form": {
    "controlList": [],
    "identifier": null,
    "matFormFieldDefaultOptions": null,
    "role": null,
    "window": false,
  },
  "icon": "add",
  "kind": "form",
  "label": null,
  "name": "filter",
  "nestModule": "jest",
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": null,
}
`;
